@@ -1,3 +1,7 @@
+# -*-Makefile-*-, or close enough
+
+AUTOMAKE_OPTIONS =	1.7.3
+
 EXTRA_DIST =	codeset.m4 gettext.m4 glibc21.m4 iconv.m4 isc-posix.m4 \
 		intdiv0.m4 inttypes-pri.m4 inttypes.m4 inttypes_h.m4 \
 		isc-posix.m4 lcmessage.m4 lib-ld.m4 lib-link.m4 lib-prefix.m4 \
