@@ -1,10 +1,10 @@
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([GNU make],[3.81a1],[bug-make@gnu.org])
+AC_INIT([GNU make],[3.81a2],[bug-make@gnu.org])
 
-AC_PREREQ(2.56)
+AC_PREREQ(2.57)
 
-AC_REVISION([[$Id: configure.in,v 1.117 2003/03/25 00:15:25 psmith Exp $]])
+AC_REVISION([[$Id: configure.in,v 1.118 2003/03/25 03:21:42 psmith Exp $]])
 
 # Autoconf setup
 AC_CONFIG_AUX_DIR(config)
